# LeakLens

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  detector.yml
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: benchmark_scan.py
docs/: architecture.md  incident-response.md  output-schema.md
examples/: .leaklens.toml
src/leaklens/: __init__.py  baseline.py  cli.py  config.py  engine.py  entropy.py  filesystem.py  hooks.py  models.py  render.py  repository.py  rules.py
tests/: __init__.py  test_cli.py  test_config_baseline.py  test_detectors.py  test_engine.py  test_filesystem.py  test_models.py  test_render.py  test_repository.py  test_robustness.py
