[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "leaklens"
version = "0.1.0"
description = "Fast, offline secret detection with explainable findings and safe output"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Carter LaSalle" }]
keywords = ["security", "secrets", "scanner", "git", "sarif", "devsecops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
leaklens = "leaklens.cli:main"

[project.urls]
Repository = "https://github.com/carterlasalle/LeakLens"
Issues = "https://github.com/carterlasalle/LeakLens/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leaklens"]

[tool.pytest.ini_options]
addopts = "--strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["leaklens"]

